test/sematest/invalid/object_creation2.java
class A {

  public static void main(String[] args) {
    int b;
    int a = new b();
  }
}